# txssa

./: CMakeLists.txt  ProjectHome.md  changelog.txt  copyright.txt  install.txt  license.txt  makefile_GCC  readme.txt
cmake/windows-batch/: README.txt  TxSSA-VS2005-64-shared.bat  TxSSA-VS2012-64-shared.bat
doc/: README.txt
examples/: CMakeLists.txt  ssa_file_io_example.cpp  ssa_real_hermitian.c
include/: txssa.h
matlab/: README.txt  bin_mapping.m  bin_sparse_matrix.m  binned_with_separated_min_max.m  lower_bound.m  near_zero_row_col.m  p_norm_sparsity_matrix.m  p_norm_sparsity_vector.m  separated_min_max.m  ssa_action_constraint.m  ssa_compute.m  ssa_compute_exact.m  ssa_compute_exact_for_pat.m  ssa_compute_for_pat.m  ssa_impose_action.m  ssa_minimization.m  ssa_minimization_with_action.m  ssa_misfit.m  ssa_unknown_to_matrix.m  ssa_version.m
matlab/diff_structure/: README.txt  diff_centrosymmetric.m  diff_circulant.m  diff_complex_symmetric.m  diff_hamiltonian.m  diff_persymmetric.m  diff_skew_centrosymmetric.m  diff_skew_complex_symmetric.m  diff_skew_hamiltonian.m  diff_skew_persymmetric.m  diff_skew_symmetric.m
matlab/gen_structure/: README.txt  circulant.m  jay.m  kay.m  rand_centrosymmetric.m  rand_centrosymmetric_complex.m  rand_circulant_complex.m  rand_complex_symmetric.m  rand_hamiltonian.m  rand_hamiltonian_complex.m  rand_persymmetric.m  rand_persymmetric_complex.m  rand_skew_centrosymmetric.m  rand_skew_circulant_complex.m  (+10 more)
test/: CMakeLists.txt  test_p_norm_sparsity_vector.cpp
trunk/: CMakeLists.txt  authors.txt  changelog.txt  copyright.txt  install.txt  readme.txt
trunk/cmake/windows-batch/: TxSSA-VS2005-32-shared.bat  build_txssa_all.bat
trunk/doc/: CMakeLists.txt
trunk/examples/: ssa_file_io_example.cpp
trunk/include/: txssa.h
trunk/matlab/: README.txt  bin_mapping.m  bin_sparse_matrix.m  binned_with_separated_min_max.m  p_norm_sparsity_matrix.m  p_norm_sparsity_vector.m  pinv_rrqr.m  ssa_action_constraint.m  ssa_compute_exact_for_pat.m  ssa_minimization_with_action.m  ssa_misfit.m  ssa_system_no_null.m  ssa_unknown_to_matrix.m  ssa_version.m  upper_bound.m
trunk/matlab/diff_structure/: README.txt  diff_complex_symmetric.m  diff_hamiltonian.m  diff_hermitian.m  diff_persymmetric.m  diff_skew_circulant.m  diff_skew_complex_symmetric.m  diff_skew_hermitian.m  diff_skew_persymmetric.m  diff_symmetric.m
trunk/matlab/gen_structure/: README.txt  jay.m  kay.m  rand_centrosymmetric.m  rand_circulant.m  rand_circulant_complex.m  rand_hamiltonian.m  rand_hamiltonian_complex.m  rand_hermitian.m  rand_persymmetric.m  rand_skew_centrosymmetric.m  rand_skew_centrosymmetric_complex.m  rand_skew_circulant.m  rand_skew_circulant_complex.m  rand_skew_hamiltonian.m  rand_skew_hamiltonian_complex.m  rand_skew_hermitian.m  rand_skew_persymmetric.m  rand_skew_persymmetric_complex.m  skew_circulant.m  spjay.m  spkay.m
trunk/matlab/test_structure/: README.txt  default_ssa_compute_exact.m  default_ssa_compute_no_bin_no_null.m  identity.m  make_circulant_rank_deficient.m  nearest_even_ranked.m  test_structure_consistency.m
trunk/matlab/utilities/: mat_pattern.m  mat_scale_element_log.m  mat_scale_row_col_norm.m  pcond.m  vec_p_norm.m
trunk/src/: CMakeLists.txt
trunk/src/blas/: blas_char_check.c  blas_char_check.h  blas_cpp_functions.h  blas_functions.c
trunk/src/blas_wrap/: dense_vector_utils.h
trunk/src/cpp/: const_modifications.h  std_extensions.h  std_new_features.h  std_utils.h  vector_vector_id.h
trunk/src/dense_matrix_pinv/: dense_matrix_qr_pinv.h
trunk/src/dense_vectors/: dense_vectors.h  dense_vectors_transpose_view.h  dense_vectors_utils.h
trunk/src/fortran/: fort_wrap_cpp_func.h
trunk/src/internal_api_error/: internal_api_error.cpp  internal_api_error.h
trunk/src/lapack/: lapack_functions.c  lapack_functions.h
trunk/src/lapack_wrap/: dense_matrix_QR.h  dense_matrix_linear_hpd.h  dense_matrix_reflectors_to_orth_col.h  dense_matrix_tri_invert.h
trunk/src/math/: complex_types.h  precision_traits.h  vector_utils.h
trunk/src/matrix_binning/: matrix_binning.h  split_pattern_to_bins.h
trunk/src/matrix_scaling/: p_normalize_dense_matrix.h  scale_vectors_and_trans.h
trunk/src/p_norm_of_vectors/: p_norm_of_vectors.h  p_norm_of_vectors_and_trans.h
trunk/src/p_norm_sparsity_matrix/: p_norm_sparsity_dense_matrix.h  p_norm_sparsity_sparse_matrix.h
trunk/src/p_norm_sparsity_vectors/: p_norm_sparsity_sparse_vectors.h  p_norm_sparsity_vector.h
trunk/src/platform/: cpu_timer.h  integral_type_range.h
trunk/src/sparse_spectral_approximation/: null_space_impose.h  sparse_spectral_binning.h  sparse_spectral_minimization.h  sparse_spectral_misfit_lhs.h  sparse_spectral_misfit_lhs_matrices.h  ssa_matrix_type.cpp  ssa_matrix_type.h  txssa.cpp
trunk/src/sparse_vectors/: sparse_vectors.h  sparse_vectors_transpose.h
trunk/src/sparsity_union/: sparse_vectors_union_w_trans.h
trunk/test/: CMakeLists.txt
trunk/visual_studio/2005/: TxSSA_all.sln  ssa_file_io_example.vcproj  test_p_norm_sparsity_vector.vcproj
trunk/visual_studio/2010/: TxSSA.vcxproj  libTxSSA.vcxproj  ssa_file_io_example.vcxproj  ssa_real_hermitian.vcxproj  test_p_norm_sparsity_vector.vcxproj
trunk/visual_studio/2012/: TxSSA.vcxproj  TxSSA.vcxproj.filters  TxSSA_all.sln  libTxSSA.vcxproj  ssa_file_io_example.vcxproj  ssa_real_hermitian.vcxproj  test_p_norm_sparsity_vector.vcxproj
(+76 files in other folders)
